--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- <h1>Hello, world!</h1> -->
 
-
+<!-- Chris was here -->
     <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -75,7 +75,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-  <div class = "jumbotron"> 
+  <div class = "jumbotron">
 
   </div>
 
