--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
 
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
@@ -36,16 +38,27 @@
 
         $(document).ready(function() {
     		$('#fullpage').fullpage({
-    		sectionsColor: ['#f2f2f2', '#4BBFC3', '#7BAABE', 'whitesmoke'],
-
+                verticalCentered: false
     		});
+
+            $('#moveSectionDown').click(function(e){
+                e.preventDefault();
+                $.fn.fullpage.moveSectionDown();
+            });
         });
 
-    </script>
 
+
+
+        </script>
 
 
 </head>
+
+
+
+
+
 
 <body>
 
@@ -79,13 +92,65 @@
         <!-- /.container -->
     </nav>
 
-<div id="fullpage">
-        <div class="section" id = "section0"><h1>Welcome to VR</h1>
+
+
+
+    <div id="fullpage">
+
+     <div class="section" id = "section0"><h1>Welcome to VR</h1>
+
+        <div id = "actions">
+                <a id="moveSectionDown" href="#">moveSectionDown</a>
+
         </div>
 
-        <div class="section">Photos</div>
+     </div>
+    <div class="section" id = "section1">
         
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+ 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="http://placehold.it/1920x1080" alt="...">
+      <div class="carousel-caption">
+          <h3>Caption Text</h3>
+      </div>
     </div>
+    <div class="item">
+      <img src="http://placehold.it/1920x1080" alt="...">
+      <div class="carousel-caption">
+          <h3>Caption Text</h3>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://placehold.it/1920x1080" alt="...">
+      <div class="carousel-caption">
+          <h3>Caption Text</h3>
+      </div>
+    </div>
+  </div>
+ 
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div> <!-- Carousel -->
+
+    </div>
+    </div>
+
+
+
 
 
 
