Added the next pages.

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Projects</title>
+    <title>Contact</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -80,8 +80,8 @@
                 <ul class="nav navbar-nav">
                 	<li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li class = "active" ><a href = contact.html>Contact</a><li>
+                    <li class = "active" ><a href = projects.html>Projects</a><li>
+                    <li><a href="#">Contact</a></li>
                     <li><a href="#">Media</a></li>
                     <li><a href="#">Opportunities</a></li>
                     
