--- a/about.html
+++ b/about.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
-<!--<html class="full" lang="en"> -->
-<!-- Make sure the <html> tag is set to the .full CSS class. Change the background image in the full.css file. -->
 <html>
+
 <head>
 
-    <meta charset="utf-8">
+	 <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full - Start Bootstrap Template</title>
+    <title>About</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS 
-    <link href="css/full.css" rel="stylesheet"> -->
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<!-- IMPLEMENTATION OF FULLPAGE.JS -->
 
-
-    <!-- IMPLEMENTATION OF FULLPAGE.JS -->
+    <link rel="stylesheet" type="text/css" href="css/fullPage.css">
 
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
+
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -44,21 +37,32 @@
     <script type="text/javascript">
 
         $(document).ready(function() {
-    $('#fullpage').fullpage({
+    		$('#fullpage').fullpage({
+                verticalCentered: false
+    		});
 
-            sectionsColor: ['#f2f2f2', '#4BBFC3', '#7BAABE', 'whitesmoke', '#000'],
-
+            $('#moveSectionDown').click(function(e){
+                e.preventDefault();
+                $.fn.fullpage.moveSectionDown();
             });
         });
 
-    </script>
+
+
+
+        </script>
+
 
 </head>
 
+
+
+
+
+
 <body>
 
-    <!-- Navigation -->
-    <nav id = "menu" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<nav id = "menu" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -74,8 +78,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class = "active" ><a href = index.html>Home</a><li>
-                    <li><a href="#">About</a></li>
+                	<li><a href="#">Home</a></li>
+
+                   	<li class = "active" ><a href = about.html>About</a><li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Media</a></li>
@@ -88,37 +93,17 @@
         <!-- /.container -->
     </nav>
 
-    <!--Content -->
-
- 
-        <div class="section">Some section
-            <div class = "container" >
-                <div class = "row" >
-                        <div class="col-xs-12 bg-content">
-                                <p> Hello </p>
-
-
-                        </div>
-                </div>
-            </div>
-        </div>
-
-        <!--
-        <div class="section">Some section</div>
-        <div class="section">Some section</div>
-        <div class="section">Some section</div> -->
 
 
 
-    <!-- Put your page content here! -->
-
-    
-
-  
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+
 </body>
 
-</html>
+
+
+
+ </html>
