--- a/media.html
+++ b/media.html
@@ -81,8 +81,8 @@
                 	<li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li class = "active" ><a href = contact.html>Contact</a><li>
-                    <li><a href="#">Media</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li class = "active" ><a href = media.html>Media</a><li>
                     <li><a href="#">Opportunities</a></li>
                     
                 </ul>
