--- a/opportunities.html
+++ b/opportunities.html
@@ -81,9 +81,10 @@
                 	<li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li class = "active" ><a href = contact.html>Contact</a><li>
+                    <li><a href="#">Contact</a></li>
                     <li><a href="#">Media</a></li>
-                    <li><a href="#">Opportunities</a></li>
+                    <li class = "active" ><a href = opportunities.html>Opportunities</a><li>
+
                     
                 </ul>
             </div>
