added changes in the about page

--- a/about.html
+++ b/about.html
@@ -93,6 +93,63 @@
         <!-- /.container -->
     </nav>
 
+    <!-- DAVID -->
+    <div class="banner">
+        <center><br><br><h1 style="color:white">About Us</h1></center>
+    </div>
+
+    <div>
+        <center><h1>About the club</h1></center>
+        <div class="focusblue">
+        a
+            
+        </div>
+    </div>
+
+        <center><h1>THE REAL PEOPLE BEHIND THE VIRTUAL WORLDS</h1></center>
+
+    <style type="text/css">
+    .banner{
+        background-color: #393E46;
+        height: 60vh;
+
+}
+
+        h1{
+            font-family: OstrichSans-Black;
+            color: tomato;
+        }
+
+
+
+        @font-face {
+        font-family: OstrichSans-Black;
+        src: url("./ostrich-sans-master/OstrichSans-Black.otf") format("opentype");
+        }
+
+        footer{
+            background-color: #FF5722;
+            height: 20em;
+            color: white;
+        }
+
+        .focusblue{
+            background-color: blue;
+        }
+
+    
+    </style>
+
+    <footer>
+        <div>Virtual Reality Club at UCSD</div>
+
+        <div class="social-icons">
+            <i class="fa fa-github fa-4x"></i>
+            <i class="fa fa-facebook-square fa-4x"></i>
+            <i class="fa fa-envelope fa-4x"></i>
+        </div>
+
+    </footer>
 
 
 
