Updated Index Page

--- a/index.html
+++ b/index.html
@@ -97,10 +97,16 @@
 
     <div id="fullpage">
 
-     <div class="section" id = "section0"><h1>Welcome to VR</h1>
+     <div class="section" id = "section0"> <center> <h1>Help Us Build the Next Reality.</h1> </center>
+            <br>
+            <br>
+
+           <center> <a href="#" class="btn btn-default btn-large" role="button">Join VR Club @ UCSD</a> </center>
+
 
         <div id = "actions">
-                <a id="moveSectionDown" href="#">moveSectionDown</a>
+             <center> <img src = "img/Icons/down-arrow-in-small-circle.png"
+                <a id="moveSectionDown" href="#"></a> </center> 
 
         </div>
 
