--- a/opportunities.html
+++ b/opportunities.html
@@ -81,7 +81,10 @@
                     <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a></li>
                     <li>
-                        <a class="page-scroll" href="#internships">Internships</a></li>
+                        <a class="page-scroll" href="#internships">Internships
+                        <img src="img/Icons/application-form.png" >
+                        </a></li>
+
                     <li>
                         <a class="page-scroll" href="#jobs">Jobs</a></li>
                     <li>
