--- a/opportunities.html
+++ b/opportunities.html
@@ -75,14 +75,14 @@
                 <a class="navbar-brand page-scroll" href="#page-top">Intro</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
+                <!-- Collect the nav links, forms, and other content for toggling -->
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a></li>
                     <li>
                         <a class="page-scroll" href="#internships">Internships
-                        <img src="img/Icons/application-form.png" >
+                        <!--<img src="img/Icons/application-form.png" >-->
                         </a></li>
 
                     <li>
@@ -95,24 +95,33 @@
         <!-- /.container -->
     </nav>
 
+    <div class="banner">
+        <div class="banner-box">
+            <center><h1>OPPORTUNITIES</h1></center>
+        </div>
+    </div>
+
     <!-- Intro Section -->
-    <section id="intro" class="intro-section">
+    <!--<section id="intro" class="intro-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Work for the Future.</h1>
                     <p>Here at the VR Club @ UCSD we want to make sure that the passion you have for virtual reality can be translated into a job or internship. Here you can find the resources to help you build a foundation to work in this growing technology! If you have questions email our opportunities coordinator!</p>
-                    <!--<a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a> -->
-                </div>
+                    --><!--<a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a> -->
+    <!--            </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
-
-
+    <div class="page-desc">
+        <h1>Making it easier to get involved</h1>
+        <p>Finding VR projects to get involved with should not be hard. Here's a curated list of projects looking for developers like you to help advance the field. Check them out! </p> 
+    </div>
 
     <!-- Internships Section -->
     <section id="internships" class="internships-section">
+    <h1>Featured Opportunites</h1>
         
          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -125,7 +134,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/VRinternship.jpg" alt="...">
+      <img src="img/VRinternship.jpg" alt="..." width="100%">
       <div class="carousel-caption">
           <h3>Animate Objects</h3>
           <p> Animate Objects/AO is a new San Diego startup that creates Augmented Reality experiences for theme parks, attractions, events and products. The company is founded by one of San Diego's most well known startup entrepreneurs who is the organizer for the San Diego Augmented Reality User Group and also created the largest Kickstarter campaign in SD history with $928k for "The Pocket Drone." At one point in his career he also worked for the Academic Computing Dept at UCSD. 
@@ -134,7 +143,7 @@ Please send resume and links to any available work, screenshots and whatever els
       </div>
     </div>
     <div class="item">
-      <img src="img/NASAinternship.jpg" alt="...">
+      <img src="img/NASAinternship.jpg" alt="..." width="100%">
       <div class="carousel-caption">
           <h3>NASA</h3>
           <p>The Jet Propulsion Laboratory is taking applications for interns interested in working with Virtual/Augmented Reality. They are working to provide AR training simulations for astronauts in space as well as visualizations for real time missions on Mars. Technologies they work with include mobile imaging and Microsoft’s HoloLens. You can find more information about JPL’s OpsLab here: http://opslab.jpl.nasa.gov/.
@@ -142,7 +151,7 @@ If you are interested, send your resume/portfolio to OpsLab member Victor Luo at
       </div>
     </div>
     <div class="item">
-      <img src="img/UCSDinternship.jpg" alt="...">
+      <img src="img/UCSDinternship.jpg" alt="..." width="100%">
       <div class="carousel-caption">
           <h3>Engineers for Exploration</h3>
           <p>Engineers for Exploration is currently seeking undergraduate interns to assist in creating technologies for archaeologists, environmentalists, explorers etc. There are several ongoing projects including GUI design and experimentation with 3d reconstruction algorithms and devices (using Google Tango tablets). If this sounds interesting you should apply.
@@ -179,26 +188,61 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
     </section> -->
 
     <!-- Jobs Section -->
-    <section id="jobs" class="jobs-section">
+    <!--<section id="jobs" class="jobs-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Jobs</h1>
+                    <h1>All opportunities</h1>
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
+
+    <div class="jobs">
+        <h1>All current opportunities</h1>
+
+        <div class="job-posting">
+            <img src="img/intel-logo.png">
+            <p><b>Internship opportunity at Intel</b></p>
+            <p>Intel's VR team is looking for experienced C# programmers for a full time position in Folsom, CA. Please send your resume and github to djusto@ucsd.edu for more information</p>
+        </div>
+
+        <div class="job-posting">
+            <img src="img/ucsd-logo.png">
+            <p><b>DataViz research project at UCSD's DesignLab</b></p></p>
+            <p>Professor Scott Klemmer is looking for VR undergraduate students to develop data visualization tools using Unity. Please send your resume and github to djusto@ucsd.edu for more information</p>
+        </div>
+
+        <div class="job-posting">
+            <img src="img/ucsd-logo.png">
+            <p><b>Psychology research project at Tu's lab</b></p>
+            <p>Professor Tu is looking to study the effects of long term exposure to virtual enviroments. This is the first research of its kind and will require experienced programmers with 3D modeling experienced to create a photo-realistic virtual reality experience to use a research tools. Please send your resume and github to djusto@ucsd.edu for more information</p>
+        </div>
+
+        <div class="job-posting">
+            <img src="img/coursera-logo.png">
+            <p><b>Internship opportunity at Coursera</b></p>
+            <p>Coursera's team is developing their experimental VR platform. They're looking into incorporating google cardboard to their classes to further test how to develop intuition on abstract mathematical concepts better. You will be working in the experimental user experience team in Seattle, WA. Looking exclusively for seniors. Please send your resume and github to djusto@ucsd.edu for more information</p>
+        </div>
+
+    </div>
+
+    <div class="publicisize">
+        <h1>Have an opportunity of your own?</h1>
+        <p>Get in touch with the best VR developers at UCSD!</p>
+        <p>Send us a brief description of your opportunity including contact information, monetary compensation (if any) and prospective applicants to djusto@ucsd.edu!</p>
+    </div>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact-section">
+    <!--<section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Contact Section</h1>
+                    <h1>Want to publicisize your own opportunity?</h1>
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -225,6 +269,60 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
     });
 
     </script>
+
+    <style type="text/css">
+        body{
+            background: #fafafa;
+
+        }
+
+        .jobs{
+            padding: 2em;
+        }
+
+            .banner{
+            display: table;
+            width: 100%;
+            background-image: url('img/VR_jobs.jpg');
+            background-size: cover;
+            height: 35em;
+            margin-bottom: 2em;
+        }
+
+
+        .publicisize{
+            padding: 2em;
+            background-color: #22313F;
+            color: white;
+            border-radius: 0.3em;
+            margin-bottom: 2em;
+        }
+
+        .job-posting{
+            text-align: left;
+            padding: 2em;
+            background-color: white;
+            margin-bottom: 2em;
+        }
+
+        .job-posting > img{
+            max-height: 3em;
+        }
+
+        .item > img{
+            max-height: 30em;
+        }
+
+        .banner-box{
+            display: table-cell;
+            vertical-align: middle;
+            color: tomato;
+        }
+
+        .page-desc{
+            padding: 2em;
+        }
+    </style>
 
 
 </body>
