--- a/opportunities.html
+++ b/opportunities.html
@@ -100,16 +100,16 @@
     <nav class="secondnavbar flex ">
         <div class="flex-row ">
             <span class="flex-item ">
-                <a class="page-scroll" href="#jobs">hi</a>
+                <a class="page-scroll" href="#jobs">Current</a>
             </span> 
 
             <span class="flex-item">
-                <a class="page-scroll" href="#jobs">hi</a>
+                <a class="page-scroll" href="#jobs">Jobs</a>
                 
             </span> 
 
             <span class="flex-item">
-                <a class="page-scroll" href="#jobs">hi</a>
+                <a class="page-scroll" href="#jobs">Plan</a>
             </span>   
         </div>
         
@@ -410,6 +410,12 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
 
         .page-desc{
             padding: 2em;
+        }
+
+        .title
+        {
+            color: white;
+
         }
     </style>
 
