--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,9 @@
 
 <!-- IMPLEMENTATION OF FULLPAGE.JS -->
 
+    <link href="css/scrolling-nav.css" rel="stylesheet">
+
+
     <link rel="stylesheet" type="text/css" href="css/fullPage.css">
 
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
@@ -34,23 +37,13 @@
 
     <!--<script type="text/javascript" src="js/jquery.fullPage.js"></script>-->
 
-    <script type="text/javascript">
-
-        $(document).ready(function() {
-    		$('#fullpage').fullpage({
-                verticalCentered: false
-    		});
-
-            $('#moveSectionDown').click(function(e){
-                e.preventDefault();
-                $.fn.fullpage.moveSectionDown();
-            });
-        });
+  
 
         </script>
 </head>
 
-<body>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 
   <div class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -86,16 +79,16 @@
     <nav class="secondnavbar flex ">
         <div class="flex-row ">
             <span class="flex-item ">
-                <a class="page-scroll" href="#jobs">Current</a>
+                <a class="page-scroll" href="#GetInvolved">Get Involved</a>
             </span> 
 
             <span class="flex-item">
-                <a class="page-scroll" href="#jobs">Jobs</a>
+                <a class="page-scroll" href="#location">Location</a>
                 
             </span> 
 
             <span class="flex-item">
-                <a class="page-scroll" href="#jobs">Plan</a>
+                <a class="page-scroll" href="#contact">Contact Us</a>
             </span>   
         </div>
         
@@ -124,7 +117,7 @@
     		<!-- milkyway.jpeg -->
     		<!-- pokemon.jpeg -->
 
-	<div class = "jumbotron" style = "background-color:#003366; background-image:url('img/feet.jpg');
+	<div class = "jumbotron" id = "GetInvolved" style = "background-color:#003366; background-image:url('img/feet.jpg');
 	height:2000px; width:auto; background-size:175%; background-position:center;">
 		<div style = "position: relative;	width:80%; height:auto; background-color:gray;
 									border-radius:15%; margin:auto; margin-top:3%;
@@ -188,7 +181,7 @@ border-bottom: 52px solid transparent; -->
 				</div>
 	</div>
 
-	<div style="position:relative; height:auto; margin:auto; top:150px;">
+	<div style="position:relative; height:auto; margin:auto; top:150px;" id = "location">
 		<div style = "position:relative; width:80%; margin:auto;
 		height:auto; background-color:gray;	border-radius:15%; opacity: 0.80;
 		filter:alpha(opacity=80); padding-bottom:5%; padding-left:5%;">
@@ -222,7 +215,7 @@ border-bottom: 52px solid transparent; -->
 
 		<div style = "position:relative; top:250px; margin-top:5%; width:80%; margin:auto;
 		height:auto; background-color:gray;	border-radius:15%; opacity: 0.85;
-		filter:alpha(opacity=85);">
+		filter:alpha(opacity=85);" id = "contact">
 			<h1 style = "position:relative; padding-top:20%; text-align:center;">
 				Contact Us
 			</h1>
@@ -322,6 +315,11 @@ border-bottom: 52px solid transparent; -->
         }
 
      </style>
+
+     <script src="js/jquery.easing.min.js"></script>
+
+    <script src="js/scrolling-nav.js"></script>
+
 
 </body>
 
