--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
     <script type="text/javascript" src="js/vendors/jquery.slimscroll.min.js"></script>
 
-    <!--<script type="text/javascript" src="js/jquery.fullPage.js"></script>-->
+    <script type="text/javascript" src="js/jquery.fullPage.js"></script>
 
     <script type="text/javascript">
 
@@ -158,19 +158,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="http://placehold.it/1920x1080" alt="...">
+      <img src="http://placehold.it/1920x1080" alt="..." width = "100%">
       <div class="carousel-caption">
           <h3>Caption Text</h3>
       </div>
     </div>
     <div class="item">
-      <img src="http://placehold.it/1920x1080" alt="...">
+      <img src="http://placehold.it/1920x1080" alt="..." width = "100%">
       <div class="carousel-caption">
           <h3>Caption Text</h3>
       </div>
     </div>
     <div class="item">
-      <img src="http://placehold.it/1920x1080" alt="...">
+      <img src="http://placehold.it/1920x1080" alt="..." width = "100%">
       <div class="carousel-caption">
           <h3>Caption Text</h3>
       </div>
