--- a/index.html
+++ b/index.html
@@ -80,18 +80,20 @@
             
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Media</a></li>
-                    <li class = "active" ><a href = opportunities.html>Opportunities</a><li>
-  
+                    <li class = "active" ><a href = "home.html">Home</a><li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="media.html">Media</a></li>
+                    <li><a href="opportunities.html">Opportunities</a></li>
+
                 </ul>
             </div>
              <!--.navbar-collapse -->
         </div> 
     </div>
+
+    <!--
 
     <nav class="secondnavbar flex ">
         <div class="flex-row ">
@@ -124,6 +126,8 @@
 
     </script>
 
+-->
+
 
 
 
@@ -146,25 +150,40 @@
 
      </div>
     <div class="section" id = "section1">
+
+        <div class="slide" id="slide1">
+            <center> <h1>ARt Gallery (Vuforia)</h1> 
+            <h3> Interested in the process of AR app dev for mobile? Interested in helping design, propose and implement an experimental art gallery on campus? Interested in how cyborgs interpret/interact with art?</h3> </center>
+            </div>
+        <div class="slide" id="slide2">
+            <center>
+            <h1>VR Video 360</h1>
+            <h3>VR Club is currently in collaboration with the Communication and Theater departments to create a full film for Virtual Reality. </h3>
+                </center>
+            </div>
+
+    </div>
+
         
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
+       <!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
  
-  <!-- Wrapper for slides -->
+ 
   <div class="carousel-inner">
     <div class="item active">
-      <img src="http://placehold.it/1920x1080" alt="..." width = "100%">
+ <img src="img/arArt.jpg" alt="First slide">
       <div class="carousel-caption">
-          <h3>Caption Text</h3>
+          <h3>ARt Gallery (Vuforia)
+Interested in the process of AR app dev for mobile? Interested in helping design, propose and implement an experimental art gallery on campus? Interested in how cyborgs interpret/interact with art?</h3>
       </div>
     </div>
     <div class="item">
-      <img src="http://placehold.it/1920x1080" alt="..." width = "100%">
+      <img src="http://placehold.it/1920x1080" alt="..." height = "100%" width = "100%">
       <div class="carousel-caption">
           <h3>Caption Text</h3>
       </div>
@@ -177,22 +196,18 @@
     </div>
   </div>
  
-  <!-- Controls -->
+  
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
   </a>
   <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
-</div> <!-- Carousel -->
+</div>  
 
     </div>
     </div>
-
-  <div>
-    <h1>SPONSORS</h1>
-    <p>SSS</p>
-  </div>
+-->
 
 
 
@@ -327,6 +342,17 @@
             color: white;
 
         }
+
+        .slideOne
+        {
+            width: 100%;
+
+        }
+
+
+
+
+  
     </style>
 
 
