--- a/contact.html
+++ b/contact.html
@@ -61,12 +61,11 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav" style="font-family:open sans;">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li class = "active" ><a href="#">Contact</a></li>
-                    <li><a href="#">Media</a></li>
-                    <li><a href = opportunities.html>Opportunities</a><li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li class = "active" ><a href="contact.html">Contact</a></li>
+                    <li><a href="media.html">Media</a></li>
+                    <li><a href = "opportunities.html">Opportunities</a><li>
 
                 </ul>
             </div>
