--- a/media.html
+++ b/media.html
@@ -1,10 +1,38 @@
 <html>
 	<head>
 	</head>
-	<body>
+	<body style="background-image: url('img/tree.jpg');">
 
+		<a href="index.html" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
 
+		<div class="navbar navbar-inverse navbar-static-top" role="navigation">
+		        <div class="container-fluid">
+		            <!-- Brand and toggle get grouped for better mobile display -->
+		            <div class="navbar-header">
+		                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		                    <span class="sr-only">Toggle navigation</span>
+		                    <span class="icon-bar"></span>
+		                    <span class="icon-bar"></span>
+		                    <span class="icon-bar"></span>
+		                </button>
+		                <!--<a class="navbar-brand" href="#">VR Club @ UCSD</a>-->
+		                <a href="#" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
+		            </div>
+		            <!-- Collect the nav links, forms, and other content for toggling -->
 
+		            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		                <ul class="nav navbar-nav" style="font-family:open sans;">
+		                    <li><a href="index.html">Home</a></li>
+		                    <li class = "active" ><a href="about.html">About</a></li>
+		                    <li><a href="contact.html">Contact</a></li>
+		                    <li><a href="media.html">Media</a></li>
+		                    <li><a href = "opportunities.html">Opportunities</a><li>
+
+		                </ul>
+		            </div>
+		             <!--.navbar-collapse -->
+		        </div>
+		    </div>
 
 		<div class="banner">
 		    <div class="banner-box">
@@ -122,7 +150,7 @@ a > .media-post:hover {
             margin-top: -4em;
             display: table;
             width: 100%;
-            background-image: url('img/media-banner.gif');
+
             background-size: cover;
             height: 35em;
       	     margin-bottom: 2em;
