Pretty much finished the landing page.

--- a/index.html
+++ b/index.html
@@ -139,23 +139,23 @@
 
      <div class="section" id = "section0">
 			 <center>
-				 <h1 style="position:relative;font-family:'Shift', open sans;top:-8em;">
-			 	 		Help Us Build the Next Reality.
+				 <h1 style="position:relative; bottom:0em;">
+			 	 	 Together We'll Build the Next Reality.
 		 		 </h1>
 			 </center>
             <br>
             <br>
 
-           <center> <a href="#" class="btn btn-default btn-large" role="button"
-						 style="position:relative; bottom:-8em; background-color:transparent;
-						 color:#d3d3d3; font-family:open sans;">
+           <center> <a href="https://docs.google.com/forms/d/1gUgqPcn_z0wt1cft38riUapG6BLm3gAMoFqQ-M9NCLg/viewform" class="btn btn-default btn-large" role="button"
+						 style="position:relative; background-color:transparent;
+						 color:#FFF; font-family:open sans; position:relative; bottom:2em;">
 						 Join VR Club @ UCSD</a> </center>
 
 
         <div id = "actions">
              <center> <img src = "img/Icons/down-arrow-in-small-circle.png"
                 <a id="moveSectionDown" href="#"
-								style="position:relative; bottom:-6em;"></a> </center>
+								style="position:relative; bottom:-3.5em;"></a> </center>
 
         </div>
 
