Kinda fixed the website lol

--- a/about.html
+++ b/about.html
@@ -141,19 +141,22 @@
         <div class="inner-wrapper">
             <center><h1>Mission</h1></center><br>
             <div class="flex">
-                <div class="flex-column">
+               <!-- <div class="flex-column">
+                    
                     <div class="mission-photo">
                         <img src="img/Mission Photo.jpg" style="width:72%; height:auto;">
 
-                    </div>
-                </div>
-                <div class="flex-column" style="position:relative; top:-36.5em;">
+                    </div> 
+                </div> 
+                <div class="flex-column" style="position:relative; top:-36.5em;"> -->
+                <div class="flex-column">
+
                      <div class="mission-statement">
                         <span><i><b>We aim to create a multidisciplinary student community with a shared interest in virtual reality or augmented reality.</b></i></span><br><br><br>
                     </div>
 
-                    <div class="mission-paragraph"
-                        style="position:relative; margin-right:3.5em; text-align:justify">
+                    <div class="mission-paragraph" >
+                        <!--style="position:relative; margin-right:3.5em; text-align:justify">-->
                         <span>At UCSD's Virtual Reality Club, our goal is to provide workshops to give members the skills that the virtual reality industry looks for to further pursue a career in the field. As well as work on a vast array of projects between different disciplines and work with clubs across campus. Since our founding in September 2015, we have reached over 200 students across a range of majors and had companies such as Qualcomm, OSSIC VR, and NanoVR come speak to our students. We look forward to growing the community and supporting the students who are passionate for the future of virtual and augmented reality.</span><br><br><br>
 
                     </div>
@@ -161,7 +164,9 @@
             </div>
         </div>
 
-        <div style="position:relative; top:-68em;"><h1 id="honeycombs">
+        <!-- <div style="position:relative; top:-68em;"><h1 id="honeycombs"> -->
+
+        <div><h1 id="honeycombs">
             <center>Meet The Team</h1></center><br>
             <div class="honeycombs" >
                 <div class="comb"> <img src="img/Anish.jpg" />
