--- a/media.html
+++ b/media.html
@@ -1,38 +1,138 @@
+<!DOCTYPE html>
 <html>
-	<head>
-	</head>
+
+<head>
+
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>About VR Club</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+
+<!-- IMPLEMENTATION OF FULLPAGE.JS -->
+
+    <link href="css/scrolling-nav.css" rel="stylesheet">
+
+
+    <link rel="stylesheet" type="text/css" href="css/fullPage.css">
+
+    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
+
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+<!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
+    <script src="js/vendors/jquery.easings.min.js"></script>
+
+
+<!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
+    <script type="text/javascript" src="js/vendors/jquery.slimscroll.min.js"></script>
+
+    <script type="text/javascript" src="js/jquery.fullPage.js"></script>
+
+
+    <!--<script type="text/javascript">
+
+        $(document).ready(function() {
+    		$('#fullpage').fullpage({
+                verticalCentered: false
+    		});
+
+            $('#moveSectionDown').click(function(e){
+                e.preventDefault();
+                $.fn.fullpage.moveSectionDown();
+            });
+        });
+
+
+
+
+        </script>
+
+    <!-- IMPORTS -->
+    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="css/homeycombs.css" />
+</head>
+
+
+
+
+
+
+
+
 	<body style="background-image: url('img/tree.jpg');">
+<div class="navbar navbar-inverse navbar-static-top" role="navigation">
+	        <div class="container-fluid">
+	            <!-- Brand and toggle get grouped for better mobile display -->
+	            <div class="navbar-header">
+	                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	                    <span class="sr-only">Toggle navigation</span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                </button>
+	                <!--<a class="navbar-brand" href="#">VR Club @ UCSD</a>-->
+	                <a href="#" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
+	            </div>
+	            <!-- Collect the nav links, forms, and other content for toggling -->
 
-		<a href="index.html" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
+	            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	                <ul class="nav navbar-nav" style="font-family:open sans;">
+	                    <li><a href="index.html">Home</a></li>
+	                    <li><a href="about.html">About</a></li>
+	                    <li><a href="contact.html">Contact</a></li>
+	                   	<li class = "active" ><a href="media.html">Media</a></li>
+	                    <li><a href = "opportunities.html">Opportunities</a><li>
 
-		<div class="navbar navbar-inverse navbar-static-top" role="navigation">
-		        <div class="container-fluid">
-		            <!-- Brand and toggle get grouped for better mobile display -->
-		            <div class="navbar-header">
-		                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		                    <span class="sr-only">Toggle navigation</span>
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                </button>
-		                <!--<a class="navbar-brand" href="#">VR Club @ UCSD</a>-->
-		                <a href="#" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
-		            </div>
-		            <!-- Collect the nav links, forms, and other content for toggling -->
+	                </ul>
+	            </div>
+	             <!--.navbar-collapse -->
+	        </div>
+	    </div>
 
-		            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		                <ul class="nav navbar-nav" style="font-family:open sans;">
-		                    <li><a href="index.html">Home</a></li>
-		                    <li class = "active" ><a href="about.html">About</a></li>
-		                    <li><a href="contact.html">Contact</a></li>
-		                    <li><a href="media.html">Media</a></li>
-		                    <li><a href = "opportunities.html">Opportunities</a><li>
+<!--
+    <div class="banner">
+        <center><br><br><h1 style="color:white">About Us</h1></center>
+    </div>
+-->
 
-		                </ul>
-		            </div>
-		             <!--.navbar-collapse -->
-		        </div>
-		    </div>
+    <nav class="secondnavbar flex ">
+        <div class="flex-row ">
+            <span class="flex-item ">
+                <a class="page-scroll" href="#Mission">Mission</a>
+            </span>
+
+            <span class="flex-item">
+                <a class="page-scroll" href="#honeycombs">Meet the Team</a>
+
+            </span>
+
+
+        </div>
+
+    </nav>
+        <script src="js/jq-sticky-anything.min.js"></script>
+
+    <script type="text/javascript">
+
+    $('.secondnavbar').stickThis({
+        top:        0,      // top position of sticky element, measured from 'ceiling'
+        minscreenwidth: 0,      // element will not be sticky when viewport width smaller than this
+         maxscreenwidth: 999999,     // element will not be sticky when viewport width larger than this
+        zindex:     1,      // z-index value of sticky element
+        debugmode:  false   // when true, errors will be logged to console
+    });
+
+    </script>
+
 
 		<div class="banner">
 		    <div class="banner-box">
